--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ChoicePanel.cs" />
      <Compile Include="Assets\scripts\CardInteraction.cs" />
      <Compile Include="Assets\scripts\FadingPanel.cs" />
      <Compile Include="Assets\scripts\SlidingScrollPanel.cs" />
