Add some card logic.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -3,10 +3,9 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.20506</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
-    <ProjectGuid>{E5D21E1A-E11B-197B-5D61-F8B51BECD859}</ProjectGuid>
+    <ProjectGuid>{1BD50271-87E2-26DD-4D02-573354F333EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -34,28 +33,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.XML" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ChoicePanel.cs" />
-     <Compile Include="Assets\scripts\CardInteraction.cs" />
-     <Compile Include="Assets\scripts\FadingPanel.cs" />
-     <Compile Include="Assets\scripts\SlidingScrollPanel.cs" />
-     <Compile Include="Assets\scripts\SoundManager.cs" />
- <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Networking">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
- </Reference>
+    <Compile Include="Assets\ChoicePanel.cs" />
+    <Compile Include="Assets\World\Game.cs" />
+    <Compile Include="Assets\scripts\CardInteraction.cs" />
+    <Compile Include="Assets\scripts\FadingPanel.cs" />
+    <Compile Include="Assets\scripts\SlidingScrollPanel.cs" />
+    <Compile Include="Assets\scripts\SoundManager.cs" />
+    <Reference Include="UnityEngine.UI">
+      <HintPath>C:\Program Files\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>C:\Program Files\Unity\Editor\Data\UnityExtensions\Unity\Networking\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Compile Include="Assets\World\World.cs" />
+    <Compile Include="Assets\World\Cards.cs" />
+    <Compile Include="Assets\World\Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -65,5 +68,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  
 </Project>
