--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\World\World.cs" />
      <Compile Include="Assets\scripts\CardInteraction.cs" />
      <Compile Include="Assets\scripts\FadingPanel.cs" />
+     <Compile Include="Assets\scripts\GameLogic.cs" />
      <Compile Include="Assets\scripts\SlidingScrollPanel.cs" />
      <Compile Include="Assets\scripts\SoundManager.cs" />
  <Reference Include="UnityEngine.UI">
